--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "drizzle-orm": "^0.32.1",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
