--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
