--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
+    "ra-data-simple-rest": "^5.1.1",
     "react": "^18.3.1",
+    "react-admin": "^5.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
