--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit generate && npx drizzle-kit migrate",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.4",
