--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit generate && npx drizzle-kit migrate",
     "db:seed": "tsx ./scripts/seed.ts",
-    "db:reset": "tsx ./scripts/reset.ts"
+    "db:reset": "tsx ./scripts/reset.ts",
+    "db:prod": "tsx ./scripts/prod.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.4",
